syntax = "proto3";

option csharp_namespace = "GrpcArtist";
option go_package = "internal/proto";

package artist;

service Artist {
  rpc GetById (ArtistRequest) returns (ArtistResponse);
  rpc GetAll(PagingRequest) returns (ArtistsResponse);
}

message ArtistRequest {
  int32 id = 1;
}

message ArtistResponse {
  int32 id = 1;
  string name = 2;
  int32 rating = 3;
}

message PagingRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ArtistsResponse {
  repeated ArtistResponse artists = 1;
}